# pcs3868-high-performance-computing

./: .gitignore
01-intro/: CMakeLists.txt  compile.sh  parallel.c
02-thread-process/: CMakeLists.txt  matrix_add.c  matrix_add_proc.c  matrix_add_thread.c
02-thread-process/teacher/: inicia-matrizes-proc.c  inicia-matrizes-seq.c  proc-compartilha.c  pthread-compartilha.c  soma-vetores-seq.c  teste-proc.c  teste-pthread.c
03-cpar/: cpar-2016-rev1.tar  ex1.cpar  ex2.c  ex2.cpar  ex3.cpar  ex3_seq.c
03-cpar/teacher/: exemplo.cpar  teste1.cpar  teste2.cpar  teste3.cpar  teste_forall.cpar
04-mutex/: aula4_ex2.cpar  soma_vet.c  soma_vet.cpar
04-mutex/teacher/: soma-erro.cpar
05-openmp/: CMakeLists.txt  find_element.c  find_element_serial.c  sum.c  sum_serial.c
06-openmp/: CMakeLists.txt  matrix_multiply_add.c  matrix_multiply_add_serial.c  sections.c
06-openmp/teacher/: omp-section.c  omp-section1.c  omp-section2.c  omp-section3.c  omp-section4.c  omp-single.c
07-openmp-tasks-barrier/: CMakeLists.txt  linked-list-parallel.c  linked-list.c  merge-sort-serial.c  merge-sort.c
07-openmp-tasks-barrier/teacher/: exemplo-lista-ligada.c  fibo-seq.c  merge-sort-seq.c  omp-exemplo-barrier.c  omp-exemplo-task.c  omp-task-fibo2.c
08-deadlocks/: CMakeLists.txt  aula8-ex1-deadlock.c  ex2-1-seq.c  filosofo-deadlock.c  filosofo-sem-deadlock.c
08-deadlocks/teacher/: aula8-ex1-deadlock.c  ex2-1-seq.c  seq-teste.txt
09-mpi/: CMakeLists.txt  ex1-seq.c  ex1.c  parallel-search.c
09-mpi/teacher/: busca-seq.c  mpi-soma-send.c  seq-teste.txt  trivial.c
10-mpi-nonblocking/: CMakeLists.txt  ex2.c  mpi-master-slave.c
10-mpi-nonblocking/teacher/: mpi-pipe-seq.c  mpi_somaBSend.c
11-mpi-broadcast/: 01-search-occurrence.c  CMakeLists.txt  pipeline.c  search-in-matrix.c
12-mpi-openmp/: CMakeLists.txt  pipeline.c
12-mpi-openmp/teacher/: soma2-mpi-openmp.c
capstone/: CMakeLists.txt  LICENSE.txt
capstone/src/: png_writer.c  png_writer.h  simplex_noise.c  simplex_noise.h  simplex_noise_omp.c  simplex_noise_serial.c
