cmake_minimum_required(VERSION 3.12.1)
project(SimplexNoise C)
include(FindPNG)
if(NOT PNG_FOUND)
    message(FATAL_ERROR "libpng could not be found.")
endif(NOT PNG_FOUND)
include(FindOpenMP)
if(NOT OPENMP_C_FOUND)
    message(FATAL_ERROR "OpenMP could not be found.")
endif(NOT OPENMP_C_FOUND)
include(CheckIPOSupported)
check_ipo_supported()

add_executable(simplex_noise_serial src/png_writer.c src/simplex_noise_serial.c src/simplex_noise.c)
# set_property(TARGET simplex_noise_serial PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
target_compile_options(simplex_noise_serial PUBLIC "$<$<CONFIG:RELEASE>:-Ofast>")
target_compile_options(simplex_noise_serial PRIVATE -Wall -Wextra -pedantic)
target_link_libraries(simplex_noise_serial m PNG::PNG)

add_executable(simplex_noise_omp src/simplex_noise_omp.c src/simplex_noise.c)
# set_property(TARGET simplex_noise_omp PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
target_compile_options(simplex_noise_omp PUBLIC "$<$<CONFIG:RELEASE>:-Ofast>")
target_compile_options(simplex_noise_omp PRIVATE -Wall -Wextra -pedantic)
target_link_libraries(simplex_noise_omp PRIVATE OpenMP::OpenMP_C m)
